# fragmetrics

./: .gitattributes  .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt  todo.md
data/valencia/: ES003L2_VALENCIA_UA2006_Revised_Clipped_to_Core.dbf  ES003L2_VALENCIA_UA2006_Revised_Clipped_to_Core.shp  ES003L2_VALENCIA_UA2006_Revised_Clipped_to_Core.shx  VALENCIA_Centre_Point.dbf  VALENCIA_Centre_Point.shp  VALENCIA_Centre_Point.shx  VALENCIA_DISTR.dbf  VALENCIA_DISTR.shp  VALENCIA_DISTR.shx  class_mapping.csv
notebooks/: 00_data_exploration.ipynb  01_fragmentation_with_SO.ipynb
reference/IndiFrag_original/IndiFrag_Tutorial/: Classification Urban Atlas 2006.txt  IndiFrag_Tutorial_EN.qgz  Results_FI_Cls.txt  Results_FI_Obj.txt  Results_FI_SO.txt
src/indifrag/: __init__.py  core.py  utils.py
src/indifrag/metrics/: __init__.py  aggregation.py  area_perimeter.py  contrast.py  diversity.py  multitemporal.py  shape.py
